--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#just a bunch of annoying lockfiles and caches that i dont need to check into git
 *.lck
-#kicad lockfile
 *fp-info-cache
+.~lock.bom.ods#
