--- a/ergogen.yml
+++ b/ergogen.yml
@@ -1,5 +1,3 @@
-# This ergogen config only works on https://ergogen.ceoloide.com/, not the main ergogen site since it uses the supermini nrf52840 footprint
-
 meta:
   engine: 4.1.0
 
@@ -104,6 +102,24 @@ outlines:
           shift: [0, -0.6U]
         - ref: matrix_outer_lower
           shift: [-0.6U, -0.6U]
+  left:
+    - where: true
+      what: rectangle
+      size: [U+2, U+3]
+      fillet: 3
+  outlines:
+    - where: true
+      what: rectangle
+      size: [14, 14]
+  cutout:
+    - name: left
+    - operation: subtract
+      name: outlines
+
+cases:
+  plate:
+    - name: cutout
+      extrude: 1.2
 
 pcbs:
   main:
